# functional

./: .gitignore  readme.md
Euler/problem_1/: sums.py  sums_description.txt
Euler/problem_2/: description.txt  fib.hs
Euler/problem_3/: prime.hs  prime_description.txt
Euler/problem_one/: description.txt  sums.hs
Euler/problem_two/: description.txt  fib.hs
bfpg/appdesign/: AppDesign.hs
explore/: DataMap.hs  EyeO.hs  Inception.hs  Makefile  TrivialMonad.hs  WriterMonad.hs  hello.hs  play.hs  shapes.hs
explore/json/: Aesyon.hs  EyeO.hs  HD.cabal  LearnHedis.hs  Main.hs  NetworkO.hs  PutJSON.hs  TestAesyon.hs  cabal.sandbox.config  respawn.py  sample.json
explore/libraries/: Bursts.hs  Files.hs  NBB.hs  Parsing.hs  Postgres.hs  Proc.hs  SlidingWindow.hs  URLFetch.hs  minions.hs
explore/libraries/AcState/: ACState.cabal  ACState.hs
explore/libraries/FFI/: FFI.cabal  pyfunction.py
explore/libraries/Fibres/: Fibres.cabal  Fibres.hs  Gumtree.hs  HedisInterface.hs  cabal.sandbox.config
explore/libraries/Instance/: Instance.cabal  Instance.hs  LICENSE  Main.hs
explore/libraries/LyncLogAnalysis/: LyncLogAnalysis.hs
explore/libraries/RPM/: RPM.hs
explore/libraries/Stats/: Stats.hs
explore/libraries/data/: movies.txt
rwh/json/samples/: SimpleJSON.hs
sandbox/: explore.hs
yorgey/week_01_one/: credit_card_validation.hs
yorgey/week_02_two/: LogAnalysis.hs
yorgey/week_04_four/: Folds.hs  lint.txt
yorgey/week_05_five/: Calc.hs
yorgey/week_07_seven/: Scrabble.hs  StringBufEditor.hs
yorgey/week_08_eight/: Party.hs
yorgey/week_10_ten/: AParser.hs  EIndexed.hs  MaybeEmployee.hs
yorgey/week_11_eleven/: AppExplore.hs  SExpr.hs
yorgey/week_12_twelve/: PlayMonad.hs  Risk.hs
yorgey/week_eight_08/: Party.hs
yorgey/week_five_05/: Calc.hs
yorgey/week_one/: cards.hs  hanoi.hs
yorgey/week_seven_07/: JoinList.hs  Scrabble.hs
yorgey/week_six_06/: Fibonacci.hs
yorgey/week_three/: Golf.hs
yorgey/week_two/: LogAnalysis.hs
