Name:       HD
Version:    1.1.1
Cabal-Version:  >= 1.2
License:    BSD3
License-File:   LICENSE
Author:     Indika Piyasena
Homepage:   http://hd.sourceforge.net/
Category:   Testing
Synopsis:   A unit testing framework for Haskell
build-type:         Simple


Library
  Build-Depends:    base, aeson, hashable, bytestring, network


executable "example"
    build-depends:
        base >= 4 && < 5
    default-language: Haskell2010
    main-is: NetworkO.hs
