Name:       HD
Version:    1.1.1
Cabal-Version:  >= 1.2
License:    MIT
License-File:   LICENSE
Author:     Indika Piyasena
Homepage:   http://hd.sourceforge.net/
Category:   Testing
Synopsis:   A unit testing framework for Haskell
build-type:         Simple


Library
  Build-Depends:    base, aeson, hashable, bytestring, network, hslogger, edit-distance


executable "hd"
    build-depends:
        base >= 4 && < 5
    default-language: Haskell2010
    main-is: NetworkO.hs

executable "aesyon"
    build-depends:
        base >= 4 && < 5
    default-language: Haskell2010
    main-is: Aesyon.hs

executable "search"
    build-depends:
        base >= 4 && < 5
    default-language: Haskell2010
    main-is: SearchO.hs
