Name:               ACState
Version:            1.1.1
Cabal-Version:      >= 1.2
License:            MIT
License-File:       LICENSE
Author:             Indika Piyasena
Homepage:           http://fibres.sourceforge.net/
Category:           Testing
Synopsis:           Learning Acid State
build-type:         Simple


Library
  Build-Depends:    base, acid-state, safecopy, mtl


executable "acstate"
    build-depends:
        base >= 4 && < 5
    default-language: Haskell2010
    main-is: ACState.hs
