Name:               Fibres
Version:            1.1.1
Cabal-Version:      >= 1.2
License:            MIT
License-File:       LICENSE
Author:             Indika Piyasena
Homepage:           http://fibres.sourceforge.net/
Category:           Testing
Synopsis:           Downloading framework
build-type:         Simple


Library
  Build-Depends:    base, HTTP, directory, filepath, hedis


executable "fibres"
    build-depends:
        base >= 4 && < 5
    default-language: Haskell2010
    main-is: Fibres.hs

